# halo

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/datasets/: golden_dataset.json
benchmarks/emerging/: __init__.py  adversarial_robustness.py  context_relevance_precision.py  contextual_faithfulness_score.py  cross_lingual_retrieval.py  knowledge_cutoff_awareness.py  latency_quality_tradeoff.py  multi_hop_reasoning_accuracy.py  query_document_semantic_consistency.py  query_document_temporal_alignment.py  rag_diversity.py  retriever_disagreement_index.py  source_attribution_accuracy.py  token_efficiency_ratio.py
config/: feature_flags.py  model_registry.py  routing_table.py  settings.py  tenant_config.py
docs/: architecture.md  benchmarks.md  configuration.md
mlops/ci/: eval_gate.py  regression_tests.py
mlops/deployment/: canary_controller.py  drift_detector.py  shadow_mode.py
mlops/model_registry/: registry.py
mlops/prompt_versioning/: prompt_store.py
notebooks/: 01_ingestion_exploration.ipynb  02_chunking_strategy_analysis.ipynb  03_retrieval_benchmarking.ipynb  04_reranker_comparison.ipynb  05_ragas_analysis.ipynb  06_emerging_benchmarks.ipynb  07_cost_optimization.ipynb  08_multi_agent_orchestration.ipynb
scripts/: generate_benchmark_report.py  init_project.py  run_evaluation.py
src/: __init__.py  api.py
src/agent/: agent_core.py
src/cost/: budget_controller.py  cost_calculator.py  cost_optimizer.py  token_tracker.py
src/memory/: memory_manager.py
(+131 files in other folders)
