[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-production-system"
version = "1.0.0"
description = "Enterprise-grade Retrieval Augmented Generation (RAG) system"
requires-python = ">=3.10"
authors = [
    {name = "RAG Team", email = "team@example.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.2",
    "mypy>=1.7.1",
]
docs = ["mkdocs>=1.5.3", "mkdocs-material>=9.4.14"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
